adding html data elements and item collision

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 	<div class="holder" id="canvas-holder">
 		<canvas id="canvas"></canvas>
 	</div>
+
+	<div data-item="" id="data-item"></div>
 </body>
 </html>
