adding the maze image and rescaling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 		<p class="text" id="instruction">Use WASD to navigate around the viewer</p>
 	</div>
 	<div class="holder" id="canvas-holder">
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" width="483px" height="483px"></canvas>
 	</div>
 
 	<div data-item="" id="data-item"></div>
+	<div id="mazeholder">
+		<img src="maze.png" id="maze">
+	</div>	
 </body>
 </html>
